Bug 94506: parameter named "arguments" is not accessible in JavaScript method. Now we check for the magic "arguments" name after var-and-arg slot optimizations. r=rogerl, sr=brendan